<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Your Password App Name</string>

    <string name="pref_category_generation">Password Generation</string>
    <string name="pref_title_auto_save">Auto-Save Generated Passwords</string>
    <string name="pref_summary_auto_save">Automatically save generated passwords.</string>
    <string name="pref_title_auto_copy">Auto-copy after generation</string>
    <string name="pref_summary_auto_copy">Automatically copy the password to the clipboard after generation.</string>

    <string name="pref_category_about">About</string>
    <string name="pref_title_about">About</string>
    <string name="pref_summary_about">View app information.</string>

    <string name="search">Search</string>
    <string name="help">Help</string>
    <string name="more_options">More options</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>