<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Search Action (Optional) -->
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        android:visible="false"
        app:showAsAction="ifRoom"/>

    <!-- Help/Support Action -->
    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_help_outline"
        android:title="@string/help"
        app:showAsAction="never"/>

    <!-- Overflow Menu -->
    <item
        android:id="@+id/action_overflow"
        android:icon="@drawable/ic_more_vert"
        android:title="@string/more_options"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/action_feedback"
                android:title="@string/send_feedback"/>
            <item
                android:id="@+id/action_privacy"
                android:title="@string/privacy_policy"/>
        </menu>
    </item>
</menu>